[gd_scene load_steps=5 format=2]

[ext_resource path="res://Core/Pause/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Core/HUD/Pilot/PilotHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Core/HUD/Mech/MechHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Core/HUD/PlayerUI.gd" type="Script" id=4]

[node name="PlayerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PilotHUD" parent="." instance=ExtResource( 2 )]

[node name="MechHUD" parent="." instance=ExtResource( 3 )]

[node name="PauseMenuControl" parent="." instance=ExtResource( 1 )]
